--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   width: 100%;
   max-width: 1920px;
   margin: 0 auto;
+  height: 100vh;
 
   grid-template-areas: 
     "h h"
@@ -15,6 +16,7 @@
 
 
 .app-wrapper-content {
+  
    grid-area: c;
    background-color: green;
 }
