Send navParams and sort list by lesson

--- a/src/Components/ChooseLessons/ChooseLessons.module.css
+++ b/src/Components/ChooseLessons/ChooseLessons.module.css
@@ -13,6 +13,10 @@
     color: black;
 }
 
+.lessonsItem a {
+    text-decoration: none;
+}
+
 .lessonsItem:hover{
     background-color: orange;
     cursor: pointer;
