--- a/src/Components/ListWords/ListWords.module.css
+++ b/src/Components/ListWords/ListWords.module.css
@@ -36,3 +36,34 @@
     background-color: lightblue;
 }
 
+/* .wordsContainer div{
+    background-color: red;
+} */
+
+.btnParent {
+    display: flex;
+    text-align: center;
+    justify-content: center;
+}
+
+.btnParent button {
+  background-color: white;
+  border: none;
+  padding: 16px 32px;
+  text-align: center;
+  justify-content: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 20px 10px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  border: 2px solid #4CAF50;
+}
+
+.btnParent button:hover {
+    background-color: #4CAF50;
+    color: white;
+}
+
+
