--- a/src/Components/ListWords/ListWords.module.css
+++ b/src/Components/ListWords/ListWords.module.css
@@ -61,6 +61,26 @@
   border: 2px solid #4CAF50;
 }
 
+.btnParentError button {
+    background-color: red;
+    border: none;
+    padding: 16px 32px;
+    text-align: center;
+    justify-content: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 20px 10px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+    border: 2px solid #4CAF50;
+}
+
+.btnParentError button:hover{
+    background-color: #4CAF50;
+    color: white;
+}
+
 .btnParent button:hover {
     background-color: #4CAF50;
     color: white;
