--- a/src/Components/Header/HeaderFunc/Header.module.css
+++ b/src/Components/Header/HeaderFunc/Header.module.css
@@ -8,11 +8,29 @@
     width: 20px;
   }
 
-  .loginBlock {
-    float: right;
-    
+  .panel{
+    height: 100%;
+    display: flex;
+    text-align: center;
+    justify-content: start;
   }
 
-  .loginBlock a {
-    color: white;
+  .panel button {
+    background-color: white;
+    border: none;
+    padding: 10px 32px;
+    text-align: center;
+    justify-content: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 10px 10px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+    border: 2px solid #4CAF50;
   }
+
+  .panel button:hover{
+    background-color: #4CAF50;
+    color: white;
+}
