--- a/src/Components/ChooseLessons/ChooseLessonsFunc/ChooseLessons.module.css
+++ b/src/Components/ChooseLessons/ChooseLessonsFunc/ChooseLessons.module.css
@@ -31,3 +31,9 @@
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
+.scroolBlock {
+    overflow: scroll;
+    height: 500px;
+    border: solid 1px black;
+}
+
