--- a/src/Components/ListWords/TranslateWords.module.css
+++ b/src/Components/ListWords/TranslateWords.module.css
@@ -17,7 +17,7 @@
 
 .wordsContainer input {
     margin-top: 50px;
-    width: 140px;
+    width: 100%;
     box-sizing: border-box;
     border: 2px solid #ccc;
     border-radius: 4px;
@@ -26,19 +26,11 @@
     background-position: 10px 10px; 
     background-repeat: no-repeat;
     padding: 12px 20px 12px 10px;
-    transition: width 0.5s ease-in-out;
 }
 
-.wordsContainer input:focus {
-    width: 100%;
-}
 .wordsContainer input:hover{
     background-color: lightblue;
 }
-
-/* .wordsContainer div{
-    background-color: red;
-} */
 
 .btnParent {
     display: flex;
@@ -47,22 +39,6 @@
 }
 
 .btnParent button {
-  background-color: white;
-  border: none;
-  padding: 16px 32px;
-  text-align: center;
-  justify-content: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 20px 10px;
-  transition-duration: 0.4s;
-  cursor: pointer;
-  border: 2px solid #4CAF50;
-}
-
-.btnParentError button {
-    background-color: red;
     border: none;
     padding: 16px 32px;
     text-align: center;
@@ -76,9 +52,12 @@
     border: 2px solid #4CAF50;
 }
 
-.btnParentError button:hover{
-    background-color: #4CAF50;
-    color: white;
+.btnParentError {
+    background-color: red;
+}
+
+.btnParrentSuccses {
+    background-color: white;
 }
 
 .btnParent button:hover {
